@@ -1,7 +1,6 @@
 package mate.academy.bookstore.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import mate.academy.bookstore.config.MapperConfig;
 import mate.academy.bookstore.dto.book.BookDto;
 import mate.academy.bookstore.dto.book.BookDtoWithoutCategoryIds;
@@ -26,7 +25,7 @@ public interface BookMapper {
     default void setCategoryIds(@MappingTarget BookDto bookDto, Book book) {
         List<Long> categoryIds = book.getCategories().stream()
                 .map(Category::getId)
-                .collect(Collectors.toList());
+                .toList();
         bookDto.setCategoryIds(categoryIds);
     }
 }
